--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,16 +17,16 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       # Step 3: Build Docker image
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-express-app:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest .
 
       # Step 4: Push image to Docker Hub
       - name: Push image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-express-app:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
       # Step 5: Deploy to EC2 via SSH
       - name: Deploy to EC2
@@ -41,7 +41,7 @@ jobs:
             sudo docker rm simple-express-app || true
 
             echo "📦 Pulling latest image..."
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/simple-express-app:latest
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
             echo "🚀 Running new container..."
-            sudo docker run -d -p 3000:8000 --name simple-express-app ${{ secrets.DOCKER_USERNAME }}/simple-express-app:latest
+            sudo docker run -d -p 3000:8000 --name simple-express-app ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
