--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,58 @@
-name: 🚀 Simple Express CI/CD
+name: 🚀 Build & Deploy Express App to EC2
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  # ------------------------------------------------
+  # 🧱 JOB 1: Build & Push Docker Image
+  # ------------------------------------------------
+  build:
+    name: 🏗️ Build & Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Step 2: Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # Step 3: Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest .
 
-      # Step 4: Push image to Docker Hub
-      - name: Push image to Docker Hub
+      - name: Push Docker image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
-      # Step 5: Deploy to EC2 via SSH
-      - name: Deploy to EC2
+  # ------------------------------------------------
+  # 🚀 JOB 2: Deploy to EC2
+  # ------------------------------------------------
+  deploy:
+    name: 🚀 Deploy to EC2
+    runs-on: ubuntu-latest
+    needs: build  # 👈 ensures deploy runs only after build succeeds
+
+    steps:
+      - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            echo "🧹 Stopping old container (if exists)..."
+            echo "🧹 Stopping old container..."
             sudo docker stop simple-express-app || true
             sudo docker rm simple-express-app || true
 
             echo "📦 Pulling latest image..."
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
-            echo "🚀 Running new container..."
+            echo "🚀 Starting new container..."
             sudo docker run -d -p 8000:8000 --name simple-express-app ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
+
+            echo "🧹 Cleaning old images..."
+            sudo docker image prune -af
