--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
             echo "🚀 Starting new container..."
-            sudo docker run -d -p 8000:8000 --name simple-express-app ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
+            sudo docker run -d -p 8000:8000 --name simple-express-app -e MONGO_URI="${{ secrets.MONGO_URI }}" ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
             echo "🧹 Cleaning old images..."
             sudo docker image prune -af
