--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,15 +44,32 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            echo "🧹 Stopping old container..."
-            sudo docker stop simple-express-app || true
-            sudo docker rm simple-express-app || true
+            echo "🧹 Stopping old containers..."
+            sudo docker stop simple-express-app redis-server || true
+            sudo docker rm simple-express-app redis-server || true
 
-            echo "📦 Pulling latest image..."
+            echo "🚀 Starting Redis container..."
+            sudo docker run -d \
+              -p 6379:6379 \
+              --name redis-server \
+              redis:7-alpine
+
+            echo "⏳ Waiting for Redis to be ready..."
+            sleep 2
+
+            echo "📦 Pulling latest app image..."
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
-            echo "🚀 Starting new container..."
-            sudo docker run -d -p 8000:8000 --name simple-express-app -e MONGO_URI="${{ secrets.MONGO_URI }}" ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
+            echo "🚀 Starting Express app with Redis..."
+            sudo docker run -d \
+              -p 8000:8000 \
+              --name simple-express-app \
+              --link redis-server:redis \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              -e REDIS_URL="redis://redis:6379" \
+              -e PORT=8000 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/simple-express-app:latest
 
+            echo "✅ Deployment complete!"
             echo "🧹 Cleaning old images..."
             sudo docker image prune -af
