--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "mongoose": "^8.20.0"
+    "mongoose": "^8.20.0",
+    "redis": "^5.9.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
